# dreamland-sei-task

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
.cora/analytics/: index.json
alembic/: env.py
alembic/versions/: 4c7469824631_initial_schema.py  f2b3c1d9e2a7_add_rate_and_batch_tracking.py
app/: main.py
app/api/: __init__.py  admin.py  dev.py  stats.py  tokens.py  usd.py
app/core/: config.py  logging.py
app/db/: engine.py
app/jobs/: __init__.py  conversion_job.py
app/models/: __init__.py  accounts.py  base.py  conversion_job_batches.py  conversion_jobs.py  ledger.py  users.py
app/schemas/: __init__.py  admin.py  dev.py  stats.py  tokens.py  usd.py
app/services/: __init__.py  account_service.py  admin_service.py  rate_service.py  stats_service.py  token_service.py  usd_service.py
app/utils/: time_utils.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/lib/: api.js
tests/: conftest.py  test_tokens.py
