[tool.poetry]
name = "dreamland"
version = "0.1.0"
description = "Dreamland – Token + USD double-entry ledger backend"
authors = ["Prithwinraj R M"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
tenacity = "^8.3.0"
apscheduler = "^3.10.4"
structlog = "^24.1.0"
prometheus-fastapi-instrumentator = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
faker = "^24.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]